[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gh-preview-extractor"
version = "0.1.0"
description = "Retrieved all public GitHub repository previews for a given user"
authors = [
    { name = "A", email = "a@example.com" },
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "beautifulsoup4",
]